--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
+    "bcryptjs": "^3.0.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.31.0",
+    "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
